--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                         </div>
                         <div class="each-client-item">
                             <div class="mh-client-item dark-bg black-shadow-1">
-                                <img src="assets/images/c-1.png" alt="" class="img-fluid">
+                                <img src="assets/images/c-1.jpg" alt="" class="img-fluid">
                                 <p>Absolute wonderful ! I am completely
                                     blown away.The very best.I was amazed
                                     at the quality</p>
