--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i
                                         class="fa fa-envelope"></i><a href="mailto:">Ankitxdop@gmail.com</a></li>
                                 <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><i
-                                        class="fa fa-phone"></i><a href="callto:">+918874619734</a></li>
+                                        class="fa fa-phone"></i><a href="callto:">xxxxxxxxx</a></li>
                                 <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s"><i
                                         class="fa fa-map-marker"></i>
                                     <address>Uttar Pradesh, India</address>
