--- a/index.html
+++ b/index.html
@@ -521,6 +521,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="container">
+			<br>
+			<br>
+			<div class="row justify-content-center">
+				<div class="col-md-7 ftco-animate text-center">
+					<h2>Have a<span> Question?  </span> <a href="https://forms.gle/2biZxCq6R1fSih36A" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
+				</div>
+			</div>
                     <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
                         <div class="mh-map">
                             
