--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                                     </div>
                                     <div class="each-info">
                                         <h4>Phone</h4>
-                                        <a href="callto:(880)-8976-987">+918874619734</a><br>
+                                        <a href="callto:">+91xxxxxxxxxx</a><br>
                                     </div>
                                 </div>
                             </div>
